--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,5 +1,5 @@
 ---
 
-# - src: git@bitbucket.org:petersonwsantos/std-network-config.git
-#   scm: git
-#   version: "v0.3"
+- src: gitlab.produbanbr.corp:ansible-tower/ansible-role-zabbix.git
+  scm: git
+  version: "v0.0.1"
