--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,4 +1,5 @@
 ---
-- src: https://9Gj23DXwnTSehZfW1yUz@gitlab.produbanbr.corp/ansible-tower/ansible-role-zabbix.git
+- src: gitlab.produbanbr.corp:ansible-tower/ansible-role-zabbix.git
   name: ansible-role-zabbix
-  version: v0.0.1
+  scm: git
+  version: "v0.0.1"
