--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,8 +1,5 @@
 ---
-- src: git@gitlab.produbanbr.corp:ansible-tower/ansible-role-zabbix.git
-  name: ansible-role-zabbix
+- src: git@github.com:petersonwsantos/ansible-journal.git
+  name: ansible-journal
   scm: git
-  version: "v0.0.1"
-- src: git@gitlab.produbanbr.corp:ansible-tower/ansible-role-journal.git
-  name: ansible-role-journal
-  scm: git
+#  version: "v0.0.1"
