--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -2,9 +2,9 @@
 - src: git@github.com:petersonwsantos/ansible-journal.git
   name: ansible-journal
   scm: git
-#  version: "v0.0.1"
-- src: github.com:petersonwsantos/ansible-openshift-login.git
-  name: ansible-openshift-login
-  scm: git
-#  version: "v0.0.1"
+  #  version: "v0.0.1"
+# - src: github.com:petersonwsantos/ansible-openshift-login.git
+#   name: ansible-openshift-login
+#   scm: git
+
 
