--- a/ansible-openshift-schedule-false.yml
+++ b/ansible-openshift-schedule-false.yml
@@ -1,5 +1,8 @@
 ---
-- name: (v0.0.1) Ensure set - Openshift schedule false
+- name: (v0.0.1) Ensure set network configuration   
   hosts: all
+  #   become: yes
   roles:
-    - ansible-openshift-schedule-false
+    # - ansible-journal
+    - ansible-openshift-login
+    # - ansible-openshift-drain 
