--- a/ansible-openshift-schedule-true.yml
+++ b/ansible-openshift-schedule-true.yml
@@ -1,5 +1,8 @@
 ---
-- name: (v0.0.1) Ensure set - Openshift schedule true
+- name: (v0.0.1) Ensure set network configuration   
   hosts: all
+  #   become: yes
   roles:
-    - ansible-openshift-schedule-true
+    # - ansible-journal
+    - ansible-openshift-login
+    # - ansible-openshift-drain 
