--- a/ansible-openshift-schedule-false.yml
+++ b/ansible-openshift-schedule-false.yml
@@ -1,5 +1,5 @@
 ---
-- name: (v0.0.1) Ensure set network configuration   
+- name: (v0.0.1) Ensure set network configuration   1
   hosts: all
   #   become: yes
   roles:
